# rotorcraft-genom3

./: Makefile.am  README.adoc  configure.ac  mikrokopter-genom3-uninstalled.pc.in  mikrokopter-genom3.pc.in  mikrokopter.gen  rotorcraft-genom3-uninstalled.pc.in  rotorcraft-genom3.pc.in  rotorcraft.gen
codels/: Makefile.am  calibration.cc  codels.h  filter.c  mikrokopter_codels.c  mikrokopter_comm_codels.c  mikrokopter_main_codels.c  rotorcraft_codels.c  rotorcraft_comm_codels.c  rotorcraft_main_codels.c  tty.c
